--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-list-endpoints": "^6.0.0",
     "mongoose": "^6.0.9",
     "spotify-web-api-node": "^5.0.2"
   },
